--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,12 @@ i {
   border-radius: 50%;
 }
 
+.project_shots {
+  height: 45%;
+  width: 42%;
+  padding: 5%;
+}
+
 html, body, .row{
   height: 100%;
 }
